--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,11 +18,11 @@ jobs:
     strategy:
       matrix:
         julia-version: ["1.10", "1.11"]
-        julia-arch: [x64, x86]
+        julia-arch: [x64]
         os: [ubuntu-latest, windows-latest, macOS-latest]
-        exclude:
-            - os: macOS-latest
-              julia-arch: x86
+        # exclude:
+        #     - os: macOS-latest
+        #       julia-arch: x86
 
     steps:
     - uses: actions/checkout@v4
